@@ -1,5 +1,6 @@
 Version 2.02.187 - 
 ===================================
+  Enhance validation for thin and cache pool conversion and swapping.
 
 Version 2.02.186 - 27th August 2019
 ===================================
